feat: add docs for showOpening
